<resources>
    <string name="app_name">Explore</string>
    <string name="welcome">Welcome to Explore Bangladesh</string>
    <string name="Menu">Go to main Menu</string>
    <string name="review">Places</string>
    <string name="plan">Create A Plan</string>
    <string name="writereview">Write A Review</string>
    <string name="Find">Find Helpful Information</string>
    <string name="explorebd">Explore Bangladesh</string>
    <string name="title_activity_create_plan">CreatePlan</string>
    <string name="large_text">
        "Create Your plan here"
    </string>
    <string name="action_settings">Settings</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="Forgot">Forgot Your Password?</string>
    <string name="SignUp">"Didn't have any account? Sign Up here."</string>

    <string name="parjatan">পর্যটন করপোরেশন-গণপ্রজাতন্ত্রী বাংলাদেশ সরকার  এর ওয়েবসাইটঃ  <a href="http://www.parjatan.gov.bd/"> http://www.parjatan.gov.bd/</a></string>


</resources>
    